--- a/shared-employee/pom.xml
+++ b/shared-employee/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -10,17 +9,31 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>spring-webflux-playground</artifactId>
+    <artifactId>shared-employee</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-webflux-playground</name>
-    <description>spring-webflux-playground</description>
+    <name>shared-employee</name>
+    <description>shared-employee</description>
     <properties>
         <java.version>11</java.version>
     </properties>
-    <modules>
-        <module>webflux-tutorial</module>
-        <module>annotation-based</module>
-        <module>functional-based</module>
-        <module>shared-employee</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
